# pygenutils

./: README.md  build.sh  pyproject.toml  setup.cfg
scripts/: bam_filter.py  bcf_filter.py
src/pygenutils/: __init__.py  bam_filter.py  bcf_filter.py  pygenutils.py
tests/: test_pygenutils.py
tests/data/: test.MT.g.vcf  test.bam  test.bed  test.cram  test.sam  test1.fasta  test1.fasta.fai
