[metadata]
name = pygenutils
version = 0.0.1
author = Jordi Camps
author_email = jcamps@gmail.com
description = Utilities to filter genomic-related files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Poshi/pygenutils
project_urls =
    Bug Tracker = https://github.com/Poshi/pygenutils/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pysam >= 0.16.0.1
scripts =
    scripts/bam_filter.py
    scripts/bcf_filter.py

[options.packages.find]
where = src
